// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <AlmDefinitionFormField
    autoFocus={true}
    help="settings.pr_decoration.form.name.azure.help"
    id="name.azure"
    onFieldChange={[MockFunction]}
    propKey="key"
    value=""
  />
  <AlmDefinitionFormField
    help="settings.pr_decoration.form.personal_access_token.azure.help"
    id="personal_access_token"
    isTextArea={true}
    onFieldChange={[MockFunction]}
    propKey="personalAccessToken"
    value=""
  />
</Fragment>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <AlmDefinitionFormField
    autoFocus={true}
    help="settings.pr_decoration.form.name.azure.help"
    id="name.azure"
    onFieldChange={[MockFunction]}
    propKey="key"
    value="key"
  />
  <AlmDefinitionFormField
    help="settings.pr_decoration.form.personal_access_token.azure.help"
    id="personal_access_token"
    isTextArea={true}
    onFieldChange={[MockFunction]}
    propKey="personalAccessToken"
    value="asdf1234"
  />
</Fragment>
`;
